Set license to MIT. It is simpler and I don't own any patents.
Signed-off-by: Sixten Thames <pm@sith.st>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rusty-duke"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 version = "0.1.0"
 authors = ["Sixten Thames <pm@sith.st>"]
 edition = "2021"
