--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,3 @@
-[package]
-name = "rusty-duke"
-license = "MIT"
-version = "0.1.0"
-authors = ["Sixten Thames <pm@sith.st>"]
-edition = "2021"
-
-[dependencies]
-rand = "0.8"
-lazy_static = "1.4"
-crossterm = "0.23"
-strum = "0.24"
-strum_macros = "0.24"
-log = "0.4"
-flexi_logger = "0.22"
+[workspace]
+members = ["rusty-duke-logic","rusty-duke-terminal", "rusty-duke-bevy"]
+resolver = "2" # Important! wgpu/Bevy needs this!
